Add level change

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,8 +12,9 @@
    <div id="game">
     <div id="aircraft"><img class="drone" src="./images/drone.png" alt="Drone"></div>
   </div>
-  <div id="score"></div>
+  <div>Рівень:<div id="level">1</div></div>
+  <div>Рахунок:<div id="score">0</div></div>
     <script src="game.js"></script>
-     <div id="score">Score: 0</div>
+     
   </body>
 </html>
