Add part of logic and images

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
   </head>
 <body >
    <div id="game">
-    <div id="aircraft"><img class="drone" src="./images/drone.png" alt="Drone"></div>
+    <img id="aircraft" class="drone" src="./images/drone.png" alt="Drone">
+    <img class="clouds clouda" src="./images/cloudc.png" >
+    <img class="clouds cloudb" src="./images/cloudb.png" >
+     <img class="clouds cloudc" src="./images/clouda.png" >
+  
+   <img class="bgObjects firstRender house" src="./images/houseone.png" >
+   <img class="bgObjects firstRender tree" src="./images/tree.png" >
+   <img class="bgObjects firstRender trees" src="./images/trees.png" >
+ 
   </div>
   <div>Рівень:<div id="level">1</div></div>
   <div>Рахунок:<div id="score">0</div></div>
-    <script src="game.js"></script>
-     
+    <script src="game.js" type="module" ></script>
   </body>
 </html>
